# rfmna

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: initial_project_description.md
docs/dev/: change_scope.yaml  change_scope_policy.md  change_scope_schema_v1.json  check_command_contract.md  cli_rf_composition_matrix.md  codex_backlog.md  cross_check_reference_tolerance_policy.md  design_bundle_contract.md  diagnostic_runtime_code_inventory.yaml  frozen_change_governance_rules.yaml  optional_track_activation.yaml  optional_track_activation_policy.md  optional_track_activation_schema_v1.json  p2_08_calibration_report.md  p2_task_executor_prompt.md  p2_task_executor_prompts.md  p3_02_design_bundle_schema_evolution.md  p3_loader_temporary_exclusions_schema_v1.json  p3_task_executor_prompt.md  p3_task_executor_prompts.md  phase1_conformance_coverage.md  phase1_gate.md  phase1_process_traceability.md  phase1_usage.md  phase2_backlog.md  phase2_ci_category_enforcement.md  phase2_conformance_coverage.md  phase2_gate.md  phase2_process_traceability.md  phase2_usage.md  phase3_backlog.md  phase3_change_surface.yaml  phase3_change_surface_policy.md  phase3_change_surface_schema_v1.json  phase3_contract_surface_governance_rules.yaml  phase3_gate.md  phase3_process_traceability.md  phase3_review_prompt.md  regression_fixture_schema_convention.md  reproducibility_impact_p2_02.md  (+8 more)
docs/spec/: diagnostics_taxonomy_v4_0_0.md  frequency_grid_and_sweep_rules_v4_0_0.md  (+5 more)
(+176 files in other folders)
