[project]
name = "rfmna"
version = "0.1.0"
description = "Personal RF MNA solver"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy>=2.3.4",
  "scipy>=1.16.1",
  "pandas>=2.3.3",
  "matplotlib>=3.10.5",
  "pydantic>=2.8",
  "typer>=0.21.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest-cov>=5.0",
]

[project.scripts]
rfmna = "rfmna.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rfmna"]
